setBall, setPlayers and setScore created in front so that Tim can use them to update the variables of the ball, players and the score via websocket from the back. Failed to solve the repsonsive issue of the menu that goes above the game when the window is resized to too small

--- a/srcs/frontend/src/Header.css
+++ b/srcs/frontend/src/Header.css
@@ -59,7 +59,7 @@
 		align-items: center;
 		justify-content:center;
 	}
-	.Banniere, {
+	.Banniere {
 		display: flex;
 		justify-content: center;
 		vertical-align: middle;
@@ -85,7 +85,7 @@
 		align-items: center;
 		justify-content:center;
 	}
-	.Banniere, {
+	.Banniere {
 		display: flex;
 		justify-content: center;
 		vertical-align: middle;
